unpackaged/main/default/objects/nbavs__DialItemAudit__c/nbavs__DialItemAudit__c.object-meta.xml
<CustomObject>
    <description>Logs dynamic dial item activities</description>
    <label>Dial Item Audit</label>
    <nameField>
        <label>Dial Item Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dial Item Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>