unpackaged/main/default/objects/nbavs__DialItemAudit__c/fields/nbavs__DialListId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DialListId__c</fullName>
    <label>Dial List Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>