unpackaged/main/default/objects/nbavs__DialItemAudit__c/fields/nbavs__LogMessage__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LogMessage__c</fullName>
    <label>Log Message</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>