unpackaged/main/default/objects/nbavs__DialItemAudit__c/fields/nbavs__TargetItemId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TargetItemId__c</fullName>
    <externalId>true</externalId>
    <label>Target Item Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>