unpackaged/main/default/objects/nbavs__DialItemAudit__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>